fix: Align decoded tx ui for batch execute (#2275)
* fix: Align decoded tx ui for batch execute

* fix: Don't show confirmation dialog for batch execute, update spending limit components to use SendAmountBlock

--- a/src/components/transactions/TxDetails/TxData/DecodedData/Multisend/styles.module.css
+++ b/src/components/transactions/TxDetails/TxData/DecodedData/Multisend/styles.module.css
@@ -1,7 +1,7 @@
 .actionsHeader {
   border-bottom: 1px solid var(--color-border-light);
   cursor: auto !important;
-  padding-left: 16px;
+  padding-left: 0;
   padding-right: 0;
   display: flex;
   justify-content: space-between;
@@ -21,6 +21,11 @@
   margin-top: 14px;
   margin-bottom: 14px;
   border: 1px solid var(--color-border-light);
+}
+
+.compact {
+  display: flex;
+  flex-direction: column;
 }
 
 .compact > div:first-child {
